# Procure-Sense-RAG

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: Dockerfile  __init__.py  main.py  requirements.txt
app/agents/: __init__.py  evaluator.py  extractor.py  retriever.py  summarizer.py
app/core/: logger.py
app/models/: models.py  schemas.py
app/routes/: __init__.py  query.py  upload.py
examples/: 1_Ingest Quotations.md  2_Queries.md
frontend/: Dockerfile  Home.py  requirements.txt
frontend/pages/: 1_Upload.py  2_Query.py
test/: test_evaluator.py  test_extractor.py  test_retriver.py  test_summarizer.py
